--- a/index-5.html
+++ b/index-5.html
@@ -1940,109 +1940,57 @@ padding:10px;
 
 <!-- featured end -->
 
+<!-- awward -->
+
+<style type="text/css">
+    .awards {background-image: linear-gradient(90deg, #ff780b 0%, #ee132f 50%, #ff780b); padding: 60px 0px; text-align: center;}
+    .awards img{width: 170px; filter: none; cursor: auto;}
+</style>
+<section class="awards">
+<div class="container">
+<div class="row">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+<div class="section-title center">
+<h2 class="title" style="color:#fff;"><strong> Award and Recognitions</strong></h2>
+<hr style="background: #fff !important; height: 2px; width: 90px; text-align: center; position: relative; margin: 0 auto 30px; border: 0;">
+</div>
+</div>
+
+<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_8.png"></div>
+<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
+<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_9.png"></div>
+<div class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><img class="lazy" src="assets/img/welcome/logo_2-2.png"></div>
+</div>
+</div>
+</section>
+<!-- award end -->
+
 
 
          
 
-   
-
-               <!-- ***** Review Area Start ***** -->
-               <section id="review" class="section review-area bg-overlay ptb_100">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-12 col-md-10 col-lg-7">
-                            <!-- Section Heading -->
-                            <div class="section-heading text-center">
-                                <h2 class="text-white">CERTIFICATE’S  and awards</h2>
-                                 </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <!-- Client Reviews -->
-                        <div class="client-reviews owl-carousel">
-                            <!-- Single Review -->
-                            <div class="single-review p-5">
-                                <!-- Review Content -->
-                                <div class="review-content">
-                                    <!-- Review Text -->
-                                    <div class="review-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam est modi amet error earum aperiam, fuga labore facere rem ab nemo possimus cum excepturi expedita. Culpa rerum, quaerat qui non.</p>
-                                    </div>
-                                    <!-- Quotation Icon -->
-                                    <div class="quot-icon">
-                                        <img class="avatar-sm" src="assets/img/quote.png" alt="">
-                                    </div>
-                                </div>
-                                <!-- Reviewer -->
-                                <div class="reviewer media mt-3">
-                                    <!-- Reviewer Thumb -->
-                                    <div class="reviewer-thumb">
-                                        <img class="avatar-lg radius-100" src="assets/img/avatar/avatar-1.png" alt="">
-                                    </div>
-                                    <!-- Reviewer Media -->
-                                    <div class="reviewer-meta media-body align-self-center ml-4">
-                                        <h5 class="reviewer-name color-primary mb-2">Junaid Hasan</h5>
-                                        <h6 class="text-secondary fw-6">CEO, Themeland</h6>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Single Review -->
-                            <div class="single-review p-5">
-                                <!-- Review Content -->
-                                <div class="review-content">
-                                    <!-- Review Text -->
-                                    <div class="review-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam est modi amet error earum aperiam, fuga labore facere rem ab nemo possimus cum excepturi expedita. Culpa rerum, quaerat qui non.</p>
-                                    </div>
-                                    <!-- Quotation Icon -->
-                                    <div class="quot-icon">
-                                        <img class="avatar-sm" src="assets/img/quote.png" alt="">
-                                    </div>
-                                </div>
-                                <!-- Reviewer -->
-                                <div class="reviewer media mt-3">
-                                    <!-- Reviewer Thumb -->
-                                    <div class="reviewer-thumb">
-                                        <img class="avatar-lg radius-100" src="assets/img/avatar/avatar-2.png" alt="">
-                                    </div>
-                                    <!-- Reviewer Media -->
-                                    <div class="reviewer-meta media-body align-self-center ml-4">
-                                        <h5 class="reviewer-name color-primary mb-2">Yasmin Akter</h5>
-                                        <h6 class="text-secondary fw-6">Founder, Themeland</h6>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Single Review -->
-                            <div class="single-review p-5">
-                                <!-- Review Content -->
-                                <div class="review-content">
-                                    <!-- Review Text -->
-                                    <div class="review-text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam est modi amet error earum aperiam, fuga labore facere rem ab nemo possimus cum excepturi expedita. Culpa rerum, quaerat qui non.</p>
-                                    </div>
-                                    <!-- Quotation Icon -->
-                                    <div class="quot-icon">
-                                        <img class="avatar-sm" src="assets/img/quote.png" alt="">
-                                    </div>
-                                </div>
-                                <!-- Reviewer -->
-                                <div class="reviewer media mt-3">
-                                    <!-- Reviewer Thumb -->
-                                    <div class="reviewer-thumb">
-                                        <img class="avatar-lg radius-100" src="assets/img/avatar/avatar-3.png" alt="">
-                                    </div>
-                                    <!-- Reviewer Media -->
-                                    <div class="reviewer-meta media-body align-self-center ml-4">
-                                        <h5 class="reviewer-name color-primary mb-2">Md. Arham</h5>
-                                        <h6 class="text-secondary fw-6">CEO, Themeland</h6>
-                                    </div>
-                                </div>
-                            </div>
+        <!--====== Call To Action Area Start ======-->
+        <section class="section cta-area bg-overlay ptb_100">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-10">
+                        <!-- Section Heading -->
+                        <div class="section-heading text-center m-0">
+                            <h2 class="text-white">Looking for the best digital agency &amp; marketing solution?</h2>
+                            <p class="text-white-50 d-none d-sm-block mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati dignissimos quae quo ad iste ipsum officiis deleniti asperiores sit.</p>
+                            <p class="text-white-50 d-block d-sm-none mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati.</p>
+                            <a href="#" class="btn btn-bordered-white mt-4">Connect on Whatsapp</a> or <a href="#" class="btn btn-bordered-white mt-4">Chat Now</a>
                         </div>
                     </div>
                 </div>
-            </section>
-            <!-- ***** Review Area End ***** -->
+            </div>
+        </section>
+        <!--====== Call To Action Area End ======-->
+
+   
+
 
         <!--====== Contact Area Start ======-->
         <section id="contact" class="contact-area dark-bg ptb_100">
@@ -2117,24 +2065,6 @@ padding:10px;
             </div>
         </section>
         <!--====== Contact Area End ======-->
-
-        <!--====== Call To Action Area Start ======-->
-        <section class="section cta-area bg-overlay ptb_100">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-lg-10">
-                        <!-- Section Heading -->
-                        <div class="section-heading text-center m-0">
-                            <h2 class="text-white">Looking for the best digital agency &amp; marketing solution?</h2>
-                            <p class="text-white-50 d-none d-sm-block mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati dignissimos quae quo ad iste ipsum officiis deleniti asperiores sit.</p>
-                            <p class="text-white-50 d-block d-sm-none mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati.</p>
-                            <a href="#" class="btn btn-bordered-white mt-4">Connect on Whatsapp</a> or <a href="#" class="btn btn-bordered-white mt-4">Chat Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--====== Call To Action Area End ======-->
 
         <!--====== Footer Area Start ======-->
         <footer class="section footer-area dark-bg">
