made lasting change

--- a/index-5(1).html
+++ b/index-5(1).html
@@ -3839,7 +3839,7 @@
                                     <a class="d-block my-2" href="#">
                                         <h3 class="text-white">+89 (0) 2354 5470091</h3>
                                     </a>
-                                    <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <p class="text-milk">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 </li>
                                 <!-- Contact Info -->
                                 <li class="contact-info color-3 bg-hover active hover-bottom dark-shadow text-center p-5 m-3">
@@ -3850,7 +3850,7 @@
                                     <a class="d-block d-sm-none my-2" href="#">
                                         <h3 class="text-white">mail@your company.com</h3>
                                     </a>
-                                    <p class="text-white-50">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                    <p class="text-milk">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 </li>
                             </ul>
                         </div>
@@ -3901,8 +3901,8 @@
                         <!-- Section Heading -->
                         <div class="section-heading text-center m-0">
                             <h2 class="text-white">Looking for the best digital agency &amp; marketing solution?</h2>
-                            <p class="text-white-50 d-none d-sm-block mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati dignissimos quae quo ad iste ipsum officiis deleniti asperiores sit.</p>
-                            <p class="text-white-50 d-block d-sm-none mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati.</p>
+                            <p class="ttext-milk d-none d-sm-block mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati dignissimos quae quo ad iste ipsum officiis deleniti asperiores sit.</p>
+                            <p class="text-milk d-block d-sm-none mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati.</p>
                             <a href="#" class="btn btn-bordered-white mt-4">Connect on Whatsapp</a> or <a href="#" class="btn btn-bordered-white mt-4">Chat Now</a>
                         </div>
                     </div>
