--- a/index-5.html
+++ b/index-5.html
@@ -498,11 +498,9 @@
                         <!-- Welcome Thumb -->
                         <div class="welcome-thumb-wrapper mt-5 mt-md-0">
                             <span class="welcome-thumb-1">
-                                <img class="d-block ml-auto" src="assets/img/welcome/crs-5.jpg" alt="">
+                                <img class=" welcome-animation d-block ml-auto" src="assets/img/welcome/nft.png" alt="">
                             </span>
-                            <span class="welcome-thumb-2">
-                                <img class="welcome-animation d-block" src="assets/img/welcome/static-4-removebg-preview.png" alt="">
-                            </span>
+                          
                         </div>
                     </div>
                 </div>
@@ -774,7 +772,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/case_studies/case_studies_1/thumb_1.jpg" alt="">
+                                <img src="assets/img/welcome/anim-1.webp" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
@@ -791,7 +789,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/case_studies/case_studies_1/thumb_2.jpg" alt="">
+                                <img src="assets/img/welcome/anim-2.webp" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
@@ -808,7 +806,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/case_studies/case_studies_1/thumb_4.jpg" alt="">
+                                <img src="assets/img/welcome/static-2.jpg" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
@@ -825,7 +823,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/case_studies/case_studies_1/thumb_3.jpg" alt="">
+                                <img src="assets/img/welcome/anim-8.webp" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
@@ -842,7 +840,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/case_studies/case_studies_1/thumb_5.jpg" alt="">
+                                <img src="assets/img/welcome/static-2.jpg" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
@@ -859,7 +857,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/case_studies/case_studies_1/thumb_6.jpg" alt="">
+                                <img src="assets/img/welcome/anim-8.webp" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
