made lasting change

--- a/index-5.html
+++ b/index-5.html
@@ -772,7 +772,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/welcome/anim-1.webp" alt="">
+                                <img src="assets/img/welcome/static-2.jpg" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
@@ -789,7 +789,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/welcome/anim-2.webp" alt="">
+                                <img src="assets/img/welcome/static-2.jpg" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
@@ -823,7 +823,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/welcome/anim-8.webp" alt="">
+                                <img src="assets/img/welcome/static-2.jpg" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
@@ -857,7 +857,7 @@ padding:10px;
                         <div class="single-case-studies">
                             <!-- Case Studies Thumb -->
                             <a href="#">
-                                <img src="assets/img/welcome/anim-8.webp" alt="">
+                                <img src="assets/img/welcome/static-2.jpg" alt="">
                             </a>
                             <!-- Case Studies Overlay -->
                             <a href="#" class="case-studies-overlay">
