--- a/index-5.html
+++ b/index-5.html
@@ -485,8 +485,8 @@
                     <!-- Welcome Intro Start -->
                     <div class="col-12 col-md-7 wow fadeInLeft" data-wow-duration="1.9s">
                         <div class="welcome-intro">
-                            <h1 class="text-white"><span class="fw-4">The Best ICO </span> Development Company In the Market</h1>
-                            <p class="text-milk text my-4">we offer the best Ico development services from design to lauch within 2 weeks .Experience first-hand professionalism.</p>
+                            <h1 class="text-white"><span class="fw-4">The Best NFT </span> Development Company In the Market</h1>
+                            <p class="text-milk text my-4">we offer the best NFT development services from design to lauch within 2 weeks .Experience first-hand professionalism.</p>
                             <!-- Buttons -->
                             <div class="button-group">
                                 <a href="#" class="btn btn-bordered-white active">Start a Project</a>
@@ -1078,32 +1078,24 @@ padding:10px;
                         <div class="col-md-12 types text-center nft">
                             <ul class="type-list prtlists">
                                 <li class="feature-box-5">
-                                    <div class="icon"> <img src="assets/img/welcome/blockchain-1.jpg"> </div>
+                                    <div class="icon"> <img src="assets/img/welcome/te.jpg"><img src="assets/img/welcome/yello green.jpg"><img src="assets/img/welcome/blueo.jpg"> </div>
                                     <h4>Blockchain Platforms</h4> </li>
                                 <li class="feature-box-5">
-                                    <div class="icon"> <img src="assets/img/welcome/blockchain-2.jpg"> </div>
+                                    <div class="icon"> <img src="assets/img/welcome/wax.jpg"><img src="assets/img/welcome/eth.jpg"> </div>
                                     <h4>Blockchain Platforms</h4> </li>
                                 <li class="feature-box-5">
-                                    <div class="icon"> <img src="assets/img/welcome/sto.jpg"> </div>
+                                    <div class="icon">  <img src="assets/img/welcome/ipfs.jpg"><img src="assets/img/welcome/filecoin.jpg"><img src="assets/img/welcome/pony.jpg"> </div>
                                     <h4>Storage Platforms</h4> </li>
                                 <li class="feature-box-5">
-                                    <div class="icon"> <img src="assets/img/welcome/te.jpg"><img src="assets/img/welcome/te.jpg"> <img src="assets/img/welcome/te.jpg">  </div>
+                                    <div class="icon"> <img src="assets/img/welcome/nftt-1.jpg"><img src="assets/img/welcome/nftt-2.jpg"><img src="assets/img/welcome/nftt-3.jpg">  </div>
                                     <h4>NFT Standards</h4> </li>
+                                    <li class="feature-box-5">
+                                        <div class="icon"> <img src="assets/img/welcome/nftt-5.jpg"><img src="assets/img/welcome/nftt-7.jpg"><img src="assets/img/welcome/nftt-6.jpg">  </div>
+                                        <h4>NFT Standards</h4> </li>
                                 <li class="feature-box-5">
-                                    <div class="icon"> <img  height="300" src="assets/img/welcome/frontend.jpg"> </div>
+                                    <div class="icon">  <img src="assets/img/welcome/angular.jpg"><img src="assets/img/welcome/hue.jpg"><img src="assets/img/welcome/react.jpg"> </div>
                                     <h4>FrontEnd Frameworks</h4> </li>
-                                <li class="feature-box-5">
-                                    <div class="icon"> <img src="assets/img/welcome/crs-2.jpg"> </div>
-                                    <h4>NFT for infrastructure development</h4> </li>
-                                <li class="feature-box-5">
-                                    <div class="icon"> <img src="assets/img/welcome/crs-1.jpg"> </div>
-                                    <h4>NFT for memes</h4> </li>
-                                <li class="feature-box-5">
-                                    <div class="icon"> <img src="assets/img/welcome/crs-3.jpg"> </div>
-                                    <h4>NFT for domains</h4> </li>
-                                <li class="feature-box-5">
-                                    <div class="icon"> <img src="assets/img/welcome/crs-1.jpg"> </div>
-                                    <h4>NFT for content subscriptions</h4> </li>
+          
                             </ul>
                         </div>
                     </div>
