fixed the width

--- a/index-5.html
+++ b/index-5.html
@@ -11,10 +11,10 @@
     <meta name="author" content="Themeland">
 
     <!-- Title  -->
-    <title>Digimax - SEO & Digital Marketing Agency HTML Template | Homepage-5</title>
+    <title>Buster  Solutions | Best NFT Development Agency</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="assets/img/favicon.png">
+    <link rel="icon" href="assets/img/welcome/buster.jpg">
 
     <!-- ***** All CSS Files ***** -->
 
@@ -40,15 +40,15 @@
                 <div class="spinner"></div>
                 <!-- Loader -->
                 <div class="loader">
-                    <span data-text-preloader="D" class="animated-letters">B</span>
-                    <span data-text-preloader="I" class="animated-letters">U</span>
-                    <span data-text-preloader="G" class="animated-letters">S</span>
-                    <span data-text-preloader="I" class="animated-letters">T</span>
-                    <span data-text-preloader="M" class="animated-letters">E</span>
-                    <span data-text-preloader="A" class="animated-letters">R</span>
+                    <span data-text-preloader="B" class="animated-letters">B</span>
+                    <span data-text-preloader="U" class="animated-letters">U</span>
+                    <span data-text-preloader="S" class="animated-letters">S</span>
+                    <span data-text-preloader="T" class="animated-letters">T</span>
+                    <span data-text-preloader="E" class="animated-letters">E</span>
+                    <span data-text-preloader="R" class="animated-letters">R</span>
                    
                 </div>
-                <p class="fw-5 text-center text-uppercase">Loading</p>
+                <p class="fw-5 text-center text-uppercase">Solutions</p>
             </div>
             <!-- Loader Animation -->
             <div class="loader-animation">
@@ -1920,9 +1920,9 @@ padding:10px;
                                 <!-- Copyright Area -->
                                 <div class="copyright-area d-flex flex-wrap justify-content-center justify-content-sm-between text-center py-4">
                                     <!-- Copyright Left -->
-                                    <div class="copyright-left text-milk">&copy; Copyrights 2020 Digimax All rights reserved.</div>
+                                    <div class="copyright-left text-milk">&copy; Copyrights 2022 bustersolutions All rights reserved.</div>
                                     <!-- Copyright Right -->
-                                    <div class="copyright-right text-milk">Made with <i class="fas fa-heart color-2"></i> By <a class="text-milk" href="#">Themeland</a></div>
+                                    <div class="copyright-right text-milk"> Made with <i class="fas fa-heart color-2"></i> By <a class="text-milk" href="#">Mj</a></div>
                                 </div>
                             </div>
                         </div>
