fixed the width

--- a/index-5.html
+++ b/index-5.html
@@ -1736,7 +1736,7 @@ padding:10px;
             </section>
             <!--====== Call To Action Area End ======-->
 
-    
+ 
 
 
             <!--====== Contact Area Start ======-->
@@ -1825,6 +1825,9 @@ padding:10px;
 .portfolio {
   color: var(--white);
   background: radial-gradient(rgba(43, 55, 96, 1), rgba(11, 16, 35, 1));
+}
+[class^="flaticon-"]:before, [class*=" flaticon-"]:before, [class^="flaticon-"]:after, [class*=" flaticon-"]:after{
+    font-size: 40px;
 }
 
 
