added clients intro

--- a/about.html
+++ b/about.html
@@ -323,7 +323,7 @@
                         <a href="about.html" class="nav-link">Communities </a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">Clients</a>
+                        <a href="clients.html" class="nav-link">Clients</a>
                     </li>
                     
                 </ul>
