--- a/about.html
+++ b/about.html
@@ -279,7 +279,7 @@
                         <a class="nav-link" href="#" >Portfolio <i class="fas fa-angle-down ml-1"></i></a>
                         <ul class="dropdown-menu">
                             <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-                            <li class="nav-item"><a href="services.html" class="nav-link">NFT Marketplace</a></li>
+                            <li class="nav-item"><a href="nft-market.html" class="nav-link">NFT Marketplace</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="#">Our Portfolio <i class="fas fa-angle-right ml-1"></i></a>
                                 <ul class="dropdown-menu">
