--- a/events.html
+++ b/events.html
@@ -273,7 +273,7 @@
                         <a href="about.html" class="nav-link">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="services.html" class="nav-link">NFT Marketplace</a>
+                        <a href="nft-market.html" class="nav-link">NFT Marketplace</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#" >Portfolio <i class="fas fa-angle-down ml-1"></i></a>
