added the market  page

--- a/index-5.html
+++ b/index-5.html
@@ -381,7 +381,8 @@
         <!-- ***** Header End ***** -->
        
         <!-- ***** Welcome Area Start ***** -->
-        <section id="home" class="section welcome-area ptb_100 overflow-hidden d-flex align-items-center">
+        <section id="home" class="section welcome-area ptb_100 overflow-hidden d-flex align-items-center" style="height:
+        800px;">
             <div class="container">
                 <div class="row align-items-center">
                     <!-- Welcome Intro Start -->
