added community page and all changes

--- a/clients.html
+++ b/clients.html
@@ -243,43 +243,20 @@
                 <!-- Navbar -->
                 <ul class="navbar-nav items">
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#">Home <i class="fas fa-angle-down ml-1"></i></a>
-                        <ul class="dropdown-menu">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="#">Multi-Page <i class="fas fa-angle-right ml-1"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a href="index.html" class="nav-link">Homepage 1</a></li>
-                                    <li class="nav-item"><a href="index-2.html" class="nav-link">Homepage 2</a></li>
-                                    <li class="nav-item"><a href="index-3.html" class="nav-link">Homepage 3</a></li>
-                                    <li class="nav-item"><a href="index-4.html" class="nav-link">Homepage 4</a></li>
-                                    <li class="nav-item"><a href="index-5.html" class="nav-link">Homepage 5</a></li>
-                                    <li class="nav-item"><a href="index-6.html" class="nav-link">Homepage 6</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link" href="#">One-Page <i class="fas fa-angle-right ml-1"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a href="index-one-page.html" class="nav-link">Homepage 1</a></li>
-                                    <li class="nav-item"><a href="index-2-one-page.html" class="nav-link">Homepage 2</a></li>
-                                    <li class="nav-item"><a href="index-3-one-page.html" class="nav-link">Homepage 3</a></li>
-                                    <li class="nav-item"><a href="index-4-one-page.html" class="nav-link">Homepage 4</a></li>
-                                    <li class="nav-item"><a href="index-5-one-page.html" class="nav-link">Homepage 5</a></li>
-                                    <li class="nav-item"><a href="index-6-one-page.html" class="nav-link">Homepage 6</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+                        <a class="nav-link" href="index-5.html">Home </a>                        
                     </li>
+
                     <li class="nav-item">
                         <a href="about.html" class="nav-link">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="services.html" class="nav-link">NFT Marketplace</a>
+                        <a href="nft-market.html" class="nav-link">NFT Marketplace</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="#" >Portfolio <i class="fas fa-angle-down ml-1"></i></a>
                         <ul class="dropdown-menu">
                             <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-                            <li class="nav-item"><a href="services.html" class="nav-link">NFT Marketplace</a></li>
+                            <li class="nav-item"><a href="nft-market.html" class="nav-link">NFT Marketplace</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link" href="#">Our Portfolio <i class="fas fa-angle-right ml-1"></i></a>
                                 <ul class="dropdown-menu">
@@ -320,7 +297,7 @@
                         <a href="events.html" class="nav-link">Events</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">Communities </a>
+                        <a href="community.html" class="nav-link">Communities </a>
                     </li>
                     <li class="nav-item">
                         <a href="clients.html" class="nav-link">Clients</a>
