--- a/index-5.html
+++ b/index-5.html
@@ -559,7 +559,7 @@ Partners and clients -->
                     
                     <main>
                       <section class="page photographer">
-                        <div class="details  wow fadeInUp" data-wow-duration="1.4s"">
+                        <div class="details  wow fadeInUp" data-wow-duration="1.4s">
                           <h1><img src="assets/img/welcome/amori.webp"></h1>
                           
                           <p><span>Becoming the first &amp; most</span> downloaded food delivery app <span>Venezuela turned possible with our</span> AI-powered platform. <span>Now build your app 7X faster and pay 80% less.</span><br><br>
