--- a/pentao.html
+++ b/pentao.html
@@ -355,7 +355,7 @@
         <!-- ***** About Area Start ***** -->
         <section class="section about-area ptb_100">
             <div class="container">
-                <span class="blog-slider__code" style="background-color: #242424; border-radius: 10px;" >    <img height="50" width="50" style="padding-left: 10px;" src="https://cnft.io/assets/images/logo_dark.svg"> <img height="50" width="50" src="https://cnft.io/assets/images/white/cnftText.svg"> <span style="float: right;" ><img height="100" width="100" src="assets/img/welcome/buster-removebg-preview.png"></span></span>
+                <span class="blog-slider__code" style="background-color: #242424; border-radius: 10px;" >     <img height="150" width="150" src="https://www.pentas.io/pentas-logo-text.svg"> <span style="float: right;" ><img height="100" width="100" src="assets/img/welcome/buster-removebg-preview.png"></span></span>
 
                 <div class="row justify-content-between align-items-center">
                     
