cfreated all case study

--- a/Lead.html
+++ b/Lead.html
@@ -377,7 +377,7 @@
                     <div class="col-12 col-lg-6">
                         <!-- About Content -->
                         <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                        <img src="https://www.appdupe.com/img/binance-clone/binance_banner_main.png">
+                        <img src="assets/img/welcome/leadnpc_imac2015_front.png">
                         </div>
                     </div>
                 </div>
@@ -442,7 +442,7 @@
                     <div class="col-12 col-lg-6">
                         <!-- About Content -->
                         <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                        <img src="assets/img/welcome/phone3.webp">
+                        <img  height="300" width="250" src="assets/img/welcome/leadnphone_iphone12promaxgold_portrait.png">
                         </div>
                     </div>
                     
@@ -521,7 +521,7 @@ font-family: 'Fira Sans', sans-serif;
             <div class="col-12 col-lg-6">
                 <!-- About Content -->
                 <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                <img src="assets/img/welcome/phone2.webp">
+                <img height="300" width="250" src="assets/img/welcome/leadnphone_iphone12promaxgold_portrait.png">
                 </div>
             </div>
             
