--- a/pentao.html
+++ b/pentao.html
@@ -379,7 +379,7 @@
                     <div class="col-12 col-lg-6">
                         <!-- About Content -->
                         <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                        <img src="https://www.appdupe.com/img/binance-clone/binance_banner_main.png">
+                        <img src="assets/img/welcome/pentaspc_imac2015_front.png">
                         </div>
                     </div>
                 </div>
@@ -400,7 +400,7 @@
                     <div class="col-12 col-lg-6">
                         <!-- About Content -->
                         <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                        <img src="assets/img/welcome/phone3.webp">
+                        <img src="assets/img/welcome/pentasphones_iphone12promaxgold_portrait.png" height="300" width="250">
                         </div>
                     </div>
                     
@@ -485,7 +485,7 @@ font-family: 'Fira Sans', sans-serif;
             <div class="col-12 col-lg-6">
                 <!-- About Content -->
                 <div class="about-thumb text-center wow fadeInRight" data-wow-duration="1.4s">
-                <img src="assets/img/welcome/phone2.webp">
+                <img src="assets/img/welcome/pentasphones_iphone12promaxgold_portrait.png" height="300" width="250">
                 </div>
             </div>
             
