--- a/about.html
+++ b/about.html
@@ -437,7 +437,7 @@
                         <!-- About Content -->
                         <div class="about-thumb text-center">
                             <video autoplay="" muted="" loop="" id="myVideo" width="100%" height="100%">
-                                <source src="https://www.blockchainappfactory.com/images/new_home/client.mp4" type="video/mp4"> Your browser does not support HTML5 video. 
+                                <source src="assets/img/welcome/video2.mp4" type="video/mp4"> Your browser does not support HTML5 video. 
                             </video> 
                         </div>
                     </div>
