--- a/tropix.html
+++ b/tropix.html
@@ -255,7 +255,7 @@
                     <li class="nav-item">
                         <a href="nft-market.html" class="nav-link">NFT Marketplace</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li class="nav-item ">
                         <a class="nav-link" href="portfolio.html" >Portfolio </a>
                    
                     </li>
