--- a/index-5.html
+++ b/index-5.html
@@ -378,8 +378,8 @@
                             <p class="text-milk text my-4">we offer the best NFT development services from design to lauch within 2 weeks .Experience first-hand professionalism.</p>
                             <!-- Buttons -->
                             <div class="button-group">
-                                <a href="#" class="btn btn-bordered-white active">Start a Project</a>
-                                <a href="#" class="btn btn-bordered-white d-none d-sm-inline-block">Contact Us</a>
+                                <a href="https://api.whatsapp.com/send?l=en&amp;text=Hi!%20I%27m%20interested%20in%20one%20of%20your%20products%20at%20BUSTER%20SOLUTION&amp;phone=919815206209" class="btn btn-bordered-white active">Start a Project</a>
+                                <a href="mailto: info@bustersolutions.com" class="btn btn-bordered-white  d-sm-inline-block">Contact Us</a>
                             </div>
                         </div>
                     </div>
