added form funcionality

--- a/index-5.html
+++ b/index-5.html
@@ -1327,7 +1327,7 @@ background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%); padding: 60p
                             <!-- Contact Box -->
                             <div class="contact-box text-center">
                                 <!-- Contact Form -->
-                                <form id="contact-form" method="POST" action="assets/php/mail.php">
+                                <form  action="https://formsubmit.co/info@bustersolutions.com" method="POST" >
                                     <div class="row">
                                         <div class="col-12">
                                             <div class="form-group">
@@ -1337,7 +1337,7 @@ background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%); padding: 60p
                                                 <input type="text" class="form-control" name="name" placeholder="Company Name" required="required">
                                             </div>
                                             <div class="form-group">
-                                                <input type="email" class="form-control" name="email" placeholder="Email" required="required">
+                                                <input type="email" class="form-control" name="Email" placeholder="Email" required="required">
                                             </div>
                                             <div class="form-group">
                                                 <input type="text" class="form-control" name="subject" placeholder="Phone" required="required">
@@ -1345,7 +1345,7 @@ background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%); padding: 60p
                                         </div>
                                         <div class="col-12">
                                             <div class="form-group">
-                                                <textarea class="form-control" name="message" placeholder="Message" required="required"></textarea>
+                                                <textarea class="form-control" name="Message" placeholder="Message" required="required"></textarea>
                                             </div>
                                         </div>
                                         <div class="col-12">
@@ -1353,7 +1353,7 @@ background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%); padding: 60p
                                         </div>
                                     </div>
                                 </form>
-                                <p class="form-message"></p>
+                                
                             </div>
                         </div>
                     </div>
