added form execution process

--- a/portfolio.html
+++ b/portfolio.html
@@ -401,8 +401,8 @@
 
 
        
-<section class="ptb_50" style="background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
+<section class="ptb_50" style="background-color: #ffe53bcc;
+background-image: linear-gradient(147deg, #ffe53bcc 0%, #fd3838 74%);
 
 font-family: 'Fira Sans', sans-serif;
   display: flex;">
@@ -562,8 +562,8 @@ font-family: 'Fira Sans', sans-serif;
 
 
 
-<section class="ptb_50" style="background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
+<section class="ptb_50" style="background-color: #ffe53bcc;
+background-image: linear-gradient(147deg, #ffe53bcc 0%, #fd3838 74%);
 
 font-family: 'Fira Sans', sans-serif;
   display: flex;">
@@ -714,8 +714,8 @@ font-family: 'Fira Sans', sans-serif;
     </div>
 </section>
 
-<section class="ptb_50" style="background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
+<section class="ptb_50" style="background-color: #ffe53bcc;
+background-image: linear-gradient(147deg, #ffe53bcc 0%, #fd3838 74%);
 
 font-family: 'Fira Sans', sans-serif;
   display: flex;">
@@ -862,8 +862,8 @@ font-family: 'Fira Sans', sans-serif;
 
 
 
-<section class="ptb_50" style="background-color: #FFE53B;
-background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
+<section class="ptb_50" style="background-color: #ffe53bcc;
+background-image: linear-gradient(147deg, #ffe53bcc 0%, #fd3838 74%);
 
 font-family: 'Fira Sans', sans-serif;
   display: flex;">
